--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://manishanawalakhe:manisha1998@cluster0.i1tklqe.mongodb.net
 CORS.ORIGIN=*
+ACCESS_TOKEN_SECRET=backend-program
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=full-series
+REFRESH_TOKEN_EXPIRY=10d
