--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,7 @@ ACCESS_TOKEN_SECRET=backend-program
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=full-series
 REFRESH_TOKEN_EXPIRY=10d
+
+CLOUDINARY_CLOUD_NAME=akoalcity
+CLOUDINARY_API_KEY=618541963577297
+CLOUDINARY_API_SECRET=WzlrqhW4eF4U5qCRHVWFo6QWTsQ
